--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>log4j-core</artifactId>
       <version>2.8.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.8.1</version>
+    </dependency>
 
   </dependencies>
 
