--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <version>2.0.7.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
