--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
-      <version>2.0.7.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
@@ -34,6 +33,16 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.7.1</version>
     </dependency>
+<dependency>
+  <groupId>com.googlecode.wicket-jquery-ui</groupId>
+  <artifactId>wicket-jquery-ui-plugins</artifactId>
+  <version>6.20.0</version>
+</dependency>
+<dependency>
+  <groupId>org.apache.wicket</groupId>
+  <artifactId>wicket-core</artifactId>
+  <version>6.1.1</version>
+</dependency>
 
   </dependencies>
 
