--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,16 @@
   <artifactId>wicket-core</artifactId>
   <version>6.1.1</version>
 </dependency>
+<dependency>
+  <groupId>org.jsoup</groupId>
+  <artifactId>jsoup</artifactId>
+  <version>1.6.1</version>
+</dependency>
+<dependency>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring</artifactId>
+  <version>1.2.8</version>
+</dependency>
 
   </dependencies>
 
